--- a/Turbo Racing/index.html
+++ b/Turbo Racing/index.html
@@ -6,7 +6,7 @@
     <link href="css/default.css" rel="stylesheet" />
 </head>
 <body>
-    <div>Content goes here!</div>
+    <div><canvas id="gameCanvas" width="800" height="600"></canvas></div>
     <script src="js/main.js"></script>
 </body>
 </html>
