--- a/Turbo Racing/index.html
+++ b/Turbo Racing/index.html
@@ -9,6 +9,7 @@
     <div><canvas id="gameCanvas" width="800" height="600"></canvas></div>
     <script src="js/input.js"></script>
     <script src="js/graphicscommon.js"></script>
+    <script src="js/imageloading.js"></script>
     <script src="js/track.js"></script>
     <script src="js/car.js"></script>
     <script src="js/main.js"></script>
